# multicluster-mcp-server

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
nodejs/: README.MD  jest.config.js
nodejs/src/tools/call/: applier.ts  connection.ts  multiple-cluster.test.ts  multiple-cluster.ts
python/: README.md
python/multicluster_mcp_server/: __main__.py
python/multicluster_mcp_server/core/: mcp_instance.py
python/multicluster_mcp_server/tools/: connect.py  prometheus.py
src/: index.ts
src/multicluster_mcp_server/: __main__.py
src/multicluster_mcp_server/tools/: cluster.py  connect.py  kubectl.py
src/multicluster_mcp_server/utils/: logging_config.py  prom_connect.py
src/tools/: clusters.ts  index.ts  kubectl.ts  prometheus.ts
src/tools/call/: clusters.ts  index.ts  kube-client.gvk-registry.ts  kube-client.ts  kubectl.ts  multiple-cluster.ts
src/tools/list/: index.ts  kube-schema.ts  multiple-cluster.ts
src/utils/: kubeconfig.ts
