[project]
name = "multicluster-mcp-server"
version = "0.1.3"
description = "The gateway for GenAI systems to interact with multiple Kubernetes clusters through the MCP"
authors = [{ name = "myan", email = "myan@redhat.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["kubernetes>=32.0.1", "mcp[cli]>=1.8.0"]
keywords = [
  "MCP",
  "python",
  "Kubernetes",
  "Multi-Cluster",
  "open-cluster-management",
]
license = "MIT"

[tool.poetry]
packages = [{ include = "multicluster_mcp_server", from = "src" }]
exclude = ["images/*", "nodejs/*"]

[project.scripts]
multicluster-mcp-server = "multicluster_mcp_server.__main__:main"

[project.urls]
repository = "https://github.com/yanmxa/multicluster-mcp-server"
